<resources>
    <string name="app_name">GymKhana</string>
    <string name="person">person</string>
    <string name="background">bg</string>
    <string name="gs">Get Started</string>
    <string name="button">Button</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="first_fragement">First_Fragement</string>
    <string name="hi_selena">Hi Selena</string>
    <string name="search_and_order">Search and Order</string>
    <string name="SYFF">Search your favorite food</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_form">Login Form</string>
    <string name="lastname">, Gomez</string>
    <string name="logout">logout</string>
    <string name="error_view">Error View</string>
    <string name="mainactivity">mainactivity</string>
    <string name="Categories">Categories</string>
    <string name="Popular">Popular</string>
    <string name="Home">Home</string>
    <string name="TODO">TODO</string>
    <string name="Profile">Profile</string>
    <string name="Feedback">Feedback</string>
    <string name="Settings">Settings</string>
    <string name="Todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="title">title</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Too">TODO</string>
    <string name="_0_0">0.0</string>
    <string name="rupees">₹</string>
    <string name="add">ADD +</string>
</resources>