 <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintid"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingBottom="120dp">

             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imageView"
                     android:layout_width="95dp"
                     android:layout_height="101dp"
                     android:layout_marginTop="24dp"
                     android:src="@drawable/person"
                     android:textColor="#f4511e"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.87"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:ignore="MissingConstraints" />


                 <TextView
                     android:id="@+id/firstnametv"
                     android:layout_width="103dp"
                     android:layout_height="41dp"
                     android:fontFamily="@font/roboto_medium"
                     android:text="@string/hi_selena"
                     android:textColor="#A1887F"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.051"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.072"
                     tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

                 <TextView
                     android:id="@+id/Search_and_order"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="194dp"
                     android:fontFamily="@font/roboto_medium"
                     android:text="@string/search_and_order"
                     android:textColor="@color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/imageView"
                     app:layout_constraintHorizontal_bias="0.117"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/firstnametv"
                     app:layout_constraintVertical_bias="0.021" />

                 <EditText
                     android:id="@+id/editText"
                     android:layout_width="397dp"
                     android:layout_height="53dp"
                     android:layout_marginTop="36dp"
                     android:background="@drawable/search_background"
                     android:drawableStart="@drawable/icon_search"
                     android:hint="@string/SYFF"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
                     android:minHeight="2dp"
                     android:paddingStart="20dp"
                     android:paddingEnd="0dp"
                     android:textColor="@color/black"
                     android:textColorHint="#757575"
                     android:textSize="14sp"
                     android:textStyle="italic"
                     android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/imageView"
                     app:layout_constraintHorizontal_bias="0.209"
                     app:layout_constraintStart_toStartOf="@+id/Search_and_order"
                     app:layout_constraintTop_toBottomOf="@+id/Search_and_order"
                     app:layout_constraintVertical_bias="0.0"
                     tools:ignore="TextContrastCheck,TextContrastCheck"
                     tools:visibility="visible" />

             </androidx.constraintlayout.widget.ConstraintLayout>

             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="2dp"
                     android:paddingStart="22dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/popular" />

                 <TextView
                     android:id="@+id/popular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/roboto_medium"
                     android:text="@string/Popular"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.045"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                     app:layout_constraintVertical_bias="0.0" />

                 <TextView
                     android:id="@+id/Categories"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_medium"
                     android:text="@string/Categories"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.05"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0" />

                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="8dp"
                     android:paddingStart="22dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/Categories"
                     app:layout_constraintVertical_bias="0.0" />


             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>

     </ScrollView>

     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2">


         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:backgroundTint="#f6f6f6"
             app:fabCradleMargin="8dp"
             app:fabCradleRoundedCornerRadius="50dp"
             app:fabCradleVerticalOffset="6dp">

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:baselineAligned="false">

                 <LinearLayout
                     android:id="@+id/homebtn"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
                     android:orientation="vertical">

                     <ImageView
                         android:id="@+id/imageviewhome"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:contentDescription="@string/TODO"
                         app:srcCompat="@drawable/home"
                         tools:ignore="ImageContrastCheck" />

                     <TextView
                         android:id="@+id/textviewhome"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/Home"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="12sp" />
                 </LinearLayout>

                 <LinearLayout
                     android:id="@+id/settings"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
                     android:orientation="vertical">

                     <ImageView
                         android:id="@+id/imageViewsettings"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:contentDescription="@string/TODO"
                         app:srcCompat="@drawable/setting"
                         tools:ignore="ImageContrastCheck" />

                     <TextView
                         android:id="@+id/textviewsettings"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/Settings"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="12sp" />
                 </LinearLayout>

                 <LinearLayout
                     android:id="@+id/invisiblebtn"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
                     android:orientation="vertical">

                     <ImageView
                         android:id="@+id/imageViewinvisiblebtn"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:contentDescription="@string/TODO"
                         android:visibility="invisible"
                         app:srcCompat="@drawable/btnmenu"
                         tools:ignore="ImageContrastCheck" />

                     <TextView
                         android:id="@+id/textviewinvisiblebtn"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/Home"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="12sp"
                         android:visibility="invisible" />
                 </LinearLayout>

                 <LinearLayout
                     android:id="@+id/feedback"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
                     android:orientation="vertical">

                     <ImageView
                         android:id="@+id/imageViewfeedback"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:contentDescription="@string/TODO"
                         app:srcCompat="@drawable/feedback"
                         tools:ignore="ImageContrastCheck" />

                     <TextView
                         android:id="@+id/textviewfeedback"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/Feedback"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="12sp" />
                 </LinearLayout>

                 <LinearLayout
                     android:id="@+id/profile"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
                     android:orientation="vertical">

                     <ImageView
                         android:id="@+id/imageViewperson"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:contentDescription="@string/TODO"
                         app:srcCompat="@drawable/profile"
                         tools:ignore="ImageContrastCheck" />

                     <TextView
                         android:id="@+id/textviewperson"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/person"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="12sp" />
                 </LinearLayout>

             </LinearLayout>

         </com.google.android.material.bottomappbar.BottomAppBar>

         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:contentDescription="@string/todo"
             android:elevation="3dp"
             android:src="@drawable/shopping_cart"
             app:backgroundTint="#ff5e00"
             app:layout_anchor="@+id/app_bar"

             tools:ignore="ImageContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck">


         </com.google.android.material.floatingactionbutton.FloatingActionButton>

     </androidx.coordinatorlayout.widget.CoordinatorLayout>


 </androidx.constraintlayout.widget.ConstraintLayout>

